--- a/porter.yaml
+++ b/porter.yaml
@@ -40,9 +40,10 @@ install:
         - "{{bundle.parameters.AZURE_RESOURCE_GROUP_NAME}}"
         - "{{bundle.parameters.AZURE_GROUP_REGION}}"
   - exec:
+      command: bash
       description: "Setting random string...."
-      command: ./helpers.sh
       arguments:
+        - ./helpers.sh
         - random_string
       outputs:
         - name: random_string
