--- a/porter.yaml
+++ b/porter.yaml
@@ -84,7 +84,7 @@ install:
       flags:
         name: "{{ bundle.outputs.random_string}}"
         resource-group: "{{ bundle.parameters.AZURE_RESOURCE_GROUP_NAME}}"
-        source: "{{bundle.parameters.APP_SRC_FILE}}"
+        src: "{{bundle.parameters.APP_SRC_FILE}}"
         
 
 upgrade:
